--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: system-ui, Helvetica, Arial, sans-serif;
 }
