--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-#root {
-  max-width: 1280px;
-  text-align: center;
+:root {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: system-ui, Helvetica, Arial, sans-serif;
 }
